--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,6 @@ phpunit.phar
 # local phpunit config
 /phpunit.xml
 
-/web/cache
-/web/templates_c
-/config.php
+web/cache/
+web/templates_c/
+config.php
